# findash

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  CONTRIBUTING.md  LICENSE  README.md  devcontainer.json  docker-compose.yml  microagents.yaml  migrate.sh  package.json  playwright.config.ts  replit.nix  setup.sh  sonar-project.properties
.github/workflows/: backend-test.yml  ci.yml  docker-publish.yml  e2e.yml  frontend-test.yml  playwright.yml  test.yml
api/: .env.local  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  migrate.sh  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  wait-for-it.sh
api/app/: main.py  models.py
api/app/helpers/: auth.py  config.py  database.py  secrets.py  secrets_service.py
api/app/migrations/: __init__.py  add_config_name.py  add_updated_at_to_vendor_metrics.py  add_user_profile_fields.py  create_api_configurations_table.py  create_budget_plans_table.py  create_users_table.py  create_vendor_configurations_tables.py  create_vendor_metrics_table.py  run_all.py
api/app/routers/: auth.py  budget.py  configuration.py  forecast.py  models.py  users.py  vendor_metrics.py  vendors_metrics.py
api/app/services/: aws_service.py  budget_service.py  configuration_service.py  datadog_service.py  forecast_service.py  vendor_metrics_service.py
api/app/tests/: conftest.py  test_datadog_e2e.py  test_vendor_metrics.py
api/app/tests/services/: test_vendor_metrics_service.py
dashboard/: .env.example  Dockerfile  LICENSE.md  README.md  package-lock.json  package.json  sonar-project.properties
dashboard/public/: index.html
dashboard/src/: App.tsx  index.css  index.tsx  routes.tsx  setupTests.ts  utils.ts
dashboard/src/components/card/: NftCard.tsx
dashboard/src/components/charts/: BarChart.tsx  LineChart.tsx
dashboard/src/components/footer/: Footer.tsx  FooterAuthDefault.tsx
dashboard/src/utils/: CallBackendService.ts  gtm.ts
helm/findash/findash/: Chart.yaml  values.yaml
tests/: auth.setup.ts  dashboard.spec.ts  vendor-metrics.spec.ts
tests/setup/: ci.setup.ts
(+38 files in other folders)
