[project]
name = "finops-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "uvicorn[standard]>=0.22.0",
    "starlette>=0.41.3",
    "itsdangerous>=2.2.0",
    "gunicorn>=23.0.0",
    "authlib>=1.3.2",
    "pyjwt==2.4.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "black>=24.10.0",
    "sqlalchemy>=2.0.28",
    "pytest-env>=1.1.3",
    "pre-commit>=2.20.0",
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "pydantic>=2.6.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=2.20.0",
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "pydantic>=2.6.1",
]
